Código/.antlr/QuetzalParser.java
// Generated from c:\Users\alexg\Desktop\Compis\HW3\Código\Quetzal.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuetzalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TK_PROGRAM=1, TK_FUNC=2, TK_DEFINE=3, TK_RETURN=4, TK_IF=5, TK_ELSE=6, 
		TK_WHILE=7, TK_PRINT=8, TK_READ=9, TK_MAIN=10, TK_VOID=11, TK_OPENIMG=12, 
		TK_SAVEIMG=13, TK_GRAYSCALE=14, TK_COLOR_REPLACE=15, TK_COLOR_FILTER=16, 
		TK_EDGE_DETECTION=17, TK_SCALE_IMAGE=18, TK_GET_COLOR_PALETTE=19, TK_COLOR_MATCH_IMAGE=20, 
		TK_ENCODE_STEGANOGRAPHY=21, TK_DECODE_STEGANOGRAPHY=22, TK_GET_IMAGE_HEIGHT=23, 
		TK_GET_IMAGE_WIDTH=24, TK_BOOL=25, TK_INT=26, TK_FLOAT=27, TK_COLOR=28, 
		CTE_COLOR=29, TK_WHITE=30, TK_RED=31, TK_LIME=32, TK_BLUE=33, TK_SILVER=34, 
		TK_MAROON=35, TK_GREEN=36, TK_NAVY=37, TK_GRAY=38, TK_YELLOW=39, TK_AQUA=40, 
		TK_FUCHSIA=41, TK_BLACK=42, TK_OLIVE=43, TK_TEAL=44, TK_PURPLE=45, SYM_SEMI_COL=46, 
		SYM_DOUB_COL=47, SYM_COMMA=48, SYM_UNDER_SCORE=49, SYM_CURLY_BRACK_OPEN=50, 
		SYM_CURLY_BRACK_CLOSE=51, SYM_SQUARE_BRACK_OPEN=52, SYM_SQUARE_BRACK_CLOSE=53, 
		SYM_PAREN_OPEN=54, SYM_PAREN_CLOSE=55, SYM_ASSIGN=56, SYM_EQUAL=57, SYM_GRE_THAN=58, 
		SYM_LOW_THAN=59, SYM_NOT_EQUAL=60, SYM_GRE_EQ=61, SYM_LOW_EQ=62, SYM_OR=63, 
		SYM_AND=64, SYM_QUOT=65, SYM_PLUS=66, SYM_MINUS=67, SYM_MULT=68, SYM_DIV=69, 
		TYPE_FLOAT=70, TYPE_INT=71, TYPE_ID=72, TYPE_COLOR=73, CTE_TAG=74, TYPE_BOOL=75, 
		NEWLINE=76, WS=77, BLOCK_COMMENT=78, LINE_COMMENT=79;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_variables = 2, RULE_function = 3, 
		RULE_block = 4, RULE_types = 5, RULE_constants = 6, RULE_statute = 7, 
		RULE_assignation = 8, RULE_condition = 9, RULE_prints = 10, RULE_var_cte = 11, 
		RULE_expression = 12, RULE_exp = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_logic_op = 16, RULE_read = 17, RULE_returning = 18, RULE_callfunc = 19, 
		RULE_loop = 20, RULE_openimg = 21, RULE_saveimg = 22, RULE_color_replace = 23, 
		RULE_grayscale = 24, RULE_color_filter = 25, RULE_edgeDetection = 26, 
		RULE_scaleImg = 27, RULE_getColorPalette = 28, RULE_colorMatchImage = 29, 
		RULE_encodeSteganography = 30, RULE_decodeSteganography = 31, RULE_getImageHeight = 32, 
		RULE_getImageWidth = 33, RULE_specfunct = 34;
	public static final String[] ruleNames = {
		"program", "main", "variables", "function", "block", "types", "constants", 
		"statute", "assignation", "condition", "prints", "var_cte", "expression", 
		"exp", "term", "factor", "logic_op", "read", "returning", "callfunc", 
		"loop", "openimg", "saveimg", "color_replace", "grayscale", "color_filter", 
		"edgeDetection", "scaleImg", "getColorPalette", "colorMatchImage", "encodeSteganography", 
		"decodeSteganography", "getImageHeight", "getImageWidth", "specfunct"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'program'", "'func'", "'define'", "'return'", "'if'", "'else'", 
		"'while'", "'prints'", "'read'", "'main'", "'void'", "'openImg'", "'saveImg'", 
		"'grayscale'", "'color_replace'", "'color_filter'", "'edgeDetection'", 
		"'scaleImg'", "'getColorPalette'", "'colorMatchImage'", "'encodeSteganography'", 
		"'decodeSteganography'", "'getImageHeight'", "'getImageWidth'", "'bool'", 
		"'int'", "'float'", "'color'", null, "'White'", "'Red'", "'Lime'", "'Blue'", 
		"'Silver'", "'Maroon'", "'Green'", "'Navy'", "'Gray'", "'Yellow'", "'Aqua'", 
		"'Fuchsia'", "'Black'", "'Olive'", "'Teal'", "'Purple'", "';'", "':'", 
		"','", "'_'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'='", "'=='", 
		"'>'", "'<'", "'!='", "'>='", "'<='", "'||'", "'&&'", "'\"'", "'+'", "'-'", 
		"'*'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "TK_PROGRAM", "TK_FUNC", "TK_DEFINE", "TK_RETURN", "TK_IF", "TK_ELSE", 
		"TK_WHILE", "TK_PRINT", "TK_READ", "TK_MAIN", "TK_VOID", "TK_OPENIMG", 
		"TK_SAVEIMG", "TK_GRAYSCALE", "TK_COLOR_REPLACE", "TK_COLOR_FILTER", "TK_EDGE_DETECTION", 
		"TK_SCALE_IMAGE", "TK_GET_COLOR_PALETTE", "TK_COLOR_MATCH_IMAGE", "TK_ENCODE_STEGANOGRAPHY", 
		"TK_DECODE_STEGANOGRAPHY", "TK_GET_IMAGE_HEIGHT", "TK_GET_IMAGE_WIDTH", 
		"TK_BOOL", "TK_INT", "TK_FLOAT", "TK_COLOR", "CTE_COLOR", "TK_WHITE", 
		"TK_RED", "TK_LIME", "TK_BLUE", "TK_SILVER", "TK_MAROON", "TK_GREEN", 
		"TK_NAVY", "TK_GRAY", "TK_YELLOW", "TK_AQUA", "TK_FUCHSIA", "TK_BLACK", 
		"TK_OLIVE", "TK_TEAL", "TK_PURPLE", "SYM_SEMI_COL", "SYM_DOUB_COL", "SYM_COMMA", 
		"SYM_UNDER_SCORE", "SYM_CURLY_BRACK_OPEN", "SYM_CURLY_BRACK_CLOSE", "SYM_SQUARE_BRACK_OPEN", 
		"SYM_SQUARE_BRACK_CLOSE", "SYM_PAREN_OPEN", "SYM_PAREN_CLOSE", "SYM_ASSIGN", 
		"SYM_EQUAL", "SYM_GRE_THAN", "SYM_LOW_THAN", "SYM_NOT_EQUAL", "SYM_GRE_EQ", 
		"SYM_LOW_EQ", "SYM_OR", "SYM_AND", "SYM_QUOT", "SYM_PLUS", "SYM_MINUS", 
		"SYM_MULT", "SYM_DIV", "TYPE_FLOAT", "TYPE_INT", "TYPE_ID", "TYPE_COLOR", 
		"CTE_TAG", "TYPE_BOOL", "NEWLINE", "WS", "BLOCK_COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Quetzal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuetzalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_DEFINE) {
				{
				setState(70);
				variables();
				}
			}

			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(73);
				function();
				}
				break;
			}
			setState(76);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode TK_FUNC() { return getToken(QuetzalParser.TK_FUNC, 0); }
		public TerminalNode TK_MAIN() { return getToken(QuetzalParser.TK_MAIN, 0); }
		public TerminalNode SYM_PAREN_OPEN() { return getToken(QuetzalParser.SYM_PAREN_OPEN, 0); }
		public TerminalNode SYM_PAREN_CLOSE() { return getToken(QuetzalParser.SYM_PAREN_CLOSE, 0); }
		public TerminalNode SYM_CURLY_BRACK_OPEN() { return getToken(QuetzalParser.SYM_CURLY_BRACK_OPEN, 0); }
		public TerminalNode SYM_CURLY_BRACK_CLOSE() { return getToken(QuetzalParser.SYM_CURLY_BRACK_CLOSE, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public List<StatuteContext> statute() {
			return getRuleContexts(StatuteContext.class);
		}
		public StatuteContext statute(int i) {
			return getRuleContext(StatuteContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(TK_FUNC);
			setState(79);
			match(TK_MAIN);
			setState(80);
			match(SYM_PAREN_OPEN);
			setState(81);
			match(SYM_PAREN_CLOSE);
			setState(82);
			match(SYM_CURLY_BRACK_OPEN);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_DEFINE) {
				{
				setState(83);
				variables();
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TK_RETURN) | (1L << TK_IF) | (1L << TK_WHILE) | (1L << TK_PRINT) | (1L << TK_READ) | (1L << TK_OPENIMG) | (1L << TK_SAVEIMG) | (1L << TK_GRAYSCALE) | (1L << TK_COLOR_REPLACE) | (1L << TK_EDGE_DETECTION) | (1L << TK_SCALE_IMAGE) | (1L << TK_GET_COLOR_PALETTE) | (1L << TK_COLOR_MATCH_IMAGE) | (1L << TK_ENCODE_STEGANOGRAPHY) | (1L << TK_DECODE_STEGANOGRAPHY) | (1L << TK_GET_IMAGE_HEIGHT) | (1L << TK_GET_IMAGE_WIDTH))) != 0) || _la==TYPE_ID) {
				{
				{
				setState(86);
				statute();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(SYM_CURLY_BRACK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public List<TerminalNode> TK_DEFINE() { return getTokens(QuetzalParser.TK_DEFINE); }
		public TerminalNode TK_DEFINE(int i) {
			return getToken(QuetzalParser.TK_DEFINE, i);
		}
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<TerminalNode> TYPE_ID() { return getTokens(QuetzalParser.TYPE_ID); }
		public TerminalNode TYPE_ID(int i) {
			return getToken(QuetzalParser.TYPE_ID, i);
		}
		public List<TerminalNode> SYM_SEMI_COL() { return getTokens(QuetzalParser.SYM_SEMI_COL); }
		public TerminalNode SYM_SEMI_COL(int i) {
			return getToken(QuetzalParser.SYM_SEMI_COL, i);
		}
		public List<TerminalNode> SYM_ASSIGN() { return getTokens(QuetzalParser.SYM_ASSIGN); }
		public TerminalNode SYM_ASSIGN(int i) {
			return getToken(QuetzalParser.SYM_ASSIGN, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(QuetzalParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(QuetzalParser.SYM_COMMA, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94);
				match(TK_DEFINE);
				setState(95);
				types();
				setState(96);
				match(TYPE_ID);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SYM_ASSIGN) {
					{
					setState(97);
					match(SYM_ASSIGN);
					setState(98);
					expression();
					}
				}

				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYM_COMMA) {
					{
					{
					setState(101);
					match(SYM_COMMA);
					setState(102);
					match(TYPE_ID);
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SYM_ASSIGN) {
						{
						setState(103);
						match(SYM_ASSIGN);
						setState(104);
						expression();
						}
					}

					}
					}
					setState(111);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(112);
				match(SYM_SEMI_COL);
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TK_DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode TK_FUNC() { return getToken(QuetzalParser.TK_FUNC, 0); }
		public List<TerminalNode> TYPE_ID() { return getTokens(QuetzalParser.TYPE_ID); }
		public TerminalNode TYPE_ID(int i) {
			return getToken(QuetzalParser.TYPE_ID, i);
		}
		public TerminalNode SYM_PAREN_OPEN() { return getToken(QuetzalParser.SYM_PAREN_OPEN, 0); }
		public TerminalNode SYM_PAREN_CLOSE() { return getToken(QuetzalParser.SYM_PAREN_CLOSE, 0); }
		public TerminalNode SYM_CURLY_BRACK_OPEN() { return getToken(QuetzalParser.SYM_CURLY_BRACK_OPEN, 0); }
		public TerminalNode SYM_CURLY_BRACK_CLOSE() { return getToken(QuetzalParser.SYM_CURLY_BRACK_CLOSE, 0); }
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public TerminalNode TK_VOID() { return getToken(QuetzalParser.TK_VOID, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public List<StatuteContext> statute() {
			return getRuleContexts(StatuteContext.class);
		}
		public StatuteContext statute(int i) {
			return getRuleContext(StatuteContext.class,i);
		}
		public List<TerminalNode> SYM_COMMA() { return getTokens(QuetzalParser.SYM_COMMA); }
		public TerminalNode SYM_COMMA(int i) {
			return getToken(QuetzalParser.SYM_COMMA, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(TK_FUNC);
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TK_BOOL:
			case TK_INT:
			case TK_FLOAT:
			case TK_COLOR:
				{
				setState(119);
				types();
				}
				break;
			case TK_VOID:
				{
				setState(120);
				match(TK_VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(123);
			match(TYPE_ID);
			setState(124);
			match(SYM_PAREN_OPEN);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TK_BOOL) | (1L << TK_INT) | (1L << TK_FLOAT) | (1L << TK_COLOR))) != 0)) {
				{
				setState(125);
				types();
				setState(126);
				match(TYPE_ID);
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYM_COMMA) {
					{
					{
					setState(127);
					match(SYM_COMMA);
					setState(128);
					types();
					setState(129);
					match(TYPE_ID);
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(138);
			match(SYM_PAREN_CLOSE);
			setState(139);
			match(SYM_CURLY_BRACK_OPEN);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_DEFINE) {
				{
				setState(140);
				variables();
				}
			}

			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TK_RETURN) | (1L << TK_IF) | (1L << TK_WHILE) | (1L << TK_PRINT) | (1L << TK_READ) | (1L << TK_OPENIMG) | (1L << TK_SAVEIMG) | (1L << TK_GRAYSCALE) | (1L << TK_COLOR_REPLACE) | (1L << TK_EDGE_DETECTION) | (1L << TK_SCALE_IMAGE) | (1L << TK_GET_COLOR_PALETTE) | (1L << TK_COLOR_MATCH_IMAGE) | (1L << TK_ENCODE_STEGANOGRAPHY) | (1L << TK_DECODE_STEGANOGRAPHY) | (1L << TK_GET_IMAGE_HEIGHT) | (1L << TK_GET_IMAGE_WIDTH))) != 0) || _la==TYPE_ID) {
				{
				{
				setState(143);
				statute();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(149);
			match(SYM_CURLY_BRACK_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
